-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2001-03-06  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-audio-format.h (default_ecasound_audio_format): removed
	* eca-object-map.h (flush): added
	* eca-ladspa-plugin-map.h (all): removed
	* eca-controller-map.h (all): removed
	* eca-audio-object-map.h (all): removed
	* eca-chainop-map.h (all): removed
	* eca-object-factory.h (ladspa_map_object): added
	* eca-object-factory.h (controller_map_object,chain_operator_map_object): added
	* eca-object-factory.h (chain_operator_map_object): added
	* eca-object-factory.h (audio_io_map_object): added
	* eca-static-object-maps.h (eca_audio_device_map): removed
	* eca-static-object-maps.h (object map objects): changed into pointers
	* eca-static-object-maps.h (unregister_default_objects): added
	
2001-02-19  Kai Vehmanen <kaiv@wakkanet.fi>

	* midi-server (register_handler, unregister_handler): added
	
2001-02-14  Kai Vehmanen <kaiv@wakkanet.fi>

	* midi-parser.h (all): new module
	* midi-server.h (various): added
	* eca-midi.h (all): module dropped
	
2001-02-08  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio-types.h (toggle_max_buffers,max_buffers): added
	* audioio-types.h (toggle_ignore_xruns,ignore_xruns): added
	* eca-audio-objects.h (toggle_max_buffers,max_buffers): added
	* eca-audio-objects.h (toggle_ignore_xruns,ignore_xruns): added
	* midiio.h (all): added
	* midiio-raw.h (all): added
	* midiio-server.h (all): added
	* midiio-client.h (all): added
	* eca-static-object-maps.h (register_default_midi_devices): added
	* eca-audio-objects.h (add_midi_device, remove_midi_device): added
	* eca-chainsetup.h (interpret_midi_device): added
	* eca-object-factory (create_midi_device): added
	* eca-audio-objects.h (set_default_midi_device,default_midi_device): added
	
2001-02-07  Kai Vehmanen <kaiv@wakkanet.fi>
